--- a/locale/en/assembly-combinator.cfg
+++ b/locale/en/assembly-combinator.cfg
@@ -1,6 +1,5 @@
 [item-name]
-fire-armor=Fire armor
+assembly-combinator=Assembly combinator
 
 [item-description]
-fire-armor=An armor that seems to catch the ground itself on fire when you take a step. It's warm to the touch.
-
+assembly-combinator=A sophisticated circuit component that orchestrates complex manufacturing sequences. Its intricate logic arrays hum with calculated precision, coordinating multiple assembly lines into seamless automation.
