camelCase to kebab-case in locale

--- a/locale/en/base.cfg
+++ b/locale/en/base.cfg
@@ -1,8 +1,8 @@
 [mod-name]
-AssemblyCombinator=Assembly combinators
+assembly-combinator=Assembly combinators
 
 [mod-description]
-AssemblyCombinator=Adds sophisticated circuit components
+assembly-combinator=Adds sophisticated circuit components
 
 [entity-name]
 assembly-combinator=Assembly combinator
