add dev-mode startup setting

--- a/locale/en/base.cfg
+++ b/locale/en/base.cfg
@@ -4,6 +4,12 @@ assembly-combinator=Assembly combinators
 [mod-description]
 assembly-combinator=Adds sophisticated circuit components
 
+[mod-setting-name]
+assembly-combinator-dev-mode=Enable dev mode
+
+[mod-setting-description]
+assembly-combinator-dev-mode=Gives the player some starting combinators and poles
+
 [entity-name]
 assembly-combinator=Assembly combinator
 
